# coba-coba-claude-code-gaming

./: CLAUDE.md  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
.claude/: launch.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/todolistmodern/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
src/: App.jsx  Button.jsx  CalendarView.jsx  FilterControls.jsx  SelectionBar.jsx  StatsDialog.jsx  SubtaskList.jsx  TaskRow.jsx  ThemeToggle.jsx  index.css  theme.js  useTheme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autostart.rs  lib.rs  scheduler.rs
src/lib/: deadline.js  getTaskStats.js  getVisibleTasks.js  groupTasksByDate.js  notificationService.js  recurringEngine.js  reminder.js  reminder.test.js  reminderPreference.js  sortPreference.js  sortTasks.js  storage.js  taskStatus.js
